# handover_moveit

./: CMakeLists.txt  README.md
include/: DataStream.h  HandoverController.h  ProactiveReleaseController.h  ReleaseController.h  RightArm.h
include/head/: Head.h
launch/: baxter_get_ready.launch
pose/0-grasp/: 0-avoid-table.bag  1-almost-ready.bag  2-ready.bag
pose/1-give/: -1-lift-a-bit.bag  0.bag
run_experiment/: commands.txt  program.rb  run.rb
src/: DataStream.cpp  HandoverController.cpp  ReleaseController.cpp  RightArm.cpp  Scene.cpp
src/head/: Head.cpp  HeadState.cpp
src/nodes/: back_to_ready_to_take_object_node.cpp  get_almost_ready_node.cpp  give_node.cpp  take_object_back_and_get_ready_to_give_node.cpp
src/nodes/experiment/: look_at_participants_node.cpp  passive_release_node.cpp  proactive_release_node.cpp  rigid_release_node.cpp
src/nodes/test/: face_image_node.cpp  gripper_test_node.cpp  test_node.cpp  test_release_node.cpp  test_scene.cpp
